--- a/.github/workflows/northquest_retail_report.yml
+++ b/.github/workflows/northquest_retail_report.yml
@@ -57,6 +57,10 @@ jobs:
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
+          
+      - name: Wait before deploying to GitHub Pages
+        if: always()
+        run: sleep 300
 
       - name: Deploy report to GitHub Pages
         id: deploy
@@ -70,7 +74,7 @@ jobs:
       - name: Wait for Allure report to be generated
         if: always()
         continue-on-error: true
-        run: sleep 300
+        run: sleep 60
 
       - name: Find latest folder in gh-pages
         id: new_folder
