--- a/.github/workflows/cashdrive_retail_report.yml
+++ b/.github/workflows/cashdrive_retail_report.yml
@@ -58,6 +58,10 @@ jobs:
           allure_report: allure-report
           allure_history: allure-history
 
+      - name: Wait before deploying to GitHub Pages
+        if: always()
+        run: sleep 30
+
       - name: Deploy report to GitHub Pages
         id: deploy
         if: always()
