--- a/.github/workflows/backoffice_report.yml
+++ b/.github/workflows/backoffice_report.yml
@@ -64,6 +64,10 @@ jobs:
           allure_report: allure-report
           allure_history: allure-history
 
+      - name: Wait before deploying to GitHub Pages
+        if: always()
+        run: sleep 300
+
       - name: Deploy report to GitHub Pages
         id: deploy
         if: always()
