--- a/.github/workflows/northquest_business_report.yml
+++ b/.github/workflows/northquest_business_report.yml
@@ -28,7 +28,7 @@ jobs:
         if: always()
         continue-on-error: true
         run: |
-          newman run northquest/northquest-business-api-tests.json --reporters cli,allure
+          newman run northquest/northquest-business-api-tests.json -e Development.postman_environment.json --reporters cli,allure
           echo "Postman tests run."
 
       - name: Get Allure history
