--- a/.github/workflows/cashdrive_business_report.yml
+++ b/.github/workflows/cashdrive_business_report.yml
@@ -40,14 +40,13 @@ jobs:
           ref: gh-pages
           path: gh-pages
 
-      - name: Prepare allure-history/cashdrive-business folder
+      - name: Prepare allure-history folder
         run: |
           mkdir -p allure-history
-          if [ -d gh-pages/cashdrive-business ]; then
-            cp -r gh-pages/cashdrive-business allure-history/
-          else
-            mkdir -p allure-history/cashdrive-business
+          if [ -d gh-pages ]; then
+            cp -r gh-pages/* allure-history/
           fi
+          mkdir -p allure-history/cashdrive-business
 
       - name: Allure report action
         id: build
@@ -56,13 +55,15 @@ jobs:
         continue-on-error: true
         with:
           allure_results: allure-results
-          gh_pages: gh-pages
           allure_report: allure-report
-          allure_history: allure-history/cashdrive-business
 
-      - name: Wait before deploying to GitHub Pages
-        if: always()
-        run: sleep 10
+      - name: Move Allure report into cashdrive-business folder
+        run: |
+          timestamp=$(date +%s)
+          report_folder="cashdrive-business/$timestamp"
+          mkdir -p "allure-history/$report_folder"
+          cp -r allure-report/* "allure-history/$report_folder"
+          echo "Report moved to allure-history/$report_folder"
 
       - name: Deploy report to GitHub Pages
         id: deploy
@@ -72,63 +73,3 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
-
-      - name: Wait for Allure report to be generated
-        if: always()
-        continue-on-error: true
-        run: sleep 10
-
-      - name: Find latest folder in cashdrive-business
-        id: new_folder
-        run: |
-          base_path=allure-history/cashdrive-business
-          latest_folder=$(find "$base_path" -mindepth 1 -maxdepth 1 -type d -name '[0-9]*' | sort -n | tail -n 1)
-          latest_folder_number=$(basename "$latest_folder")
-          echo "Latest Folder Number: $latest_folder_number"
-          echo "::set-output name=latest_folder_number::$latest_folder_number"
-
-      - name: Parse latest summary.json
-        id: parse_latest_json
-        run: |
-          latest_folder_number=${{ steps.new_folder.outputs.latest_folder_number }}
-          latest_summary_path="allure-history/cashdrive-business/${latest_folder_number}/widgets/summary.json"
-          echo "Latest Summary Path: $latest_summary_path"
-          if [ -f "$latest_summary_path" ]; then
-            cat "$latest_summary_path"
-            passed_tests=$(jq -r '.statistic.passed' "$latest_summary_path")
-            failed_tests=$(jq -r '.statistic.failed' "$latest_summary_path")
-            total_tests=$((passed_tests + failed_tests))
-            if [ "$total_tests" -gt 0 ]; then
-              passing_percentage=$(( passed_tests * 100 / total_tests ))
-              failing_percentage=$(( failed_tests * 100 / total_tests ))
-            else
-              passing_percentage=0
-              failing_percentage=0
-            fi
-            echo "::set-output name=passing_percentage::$passing_percentage"
-            echo "::set-output name=failing_percentage::$failing_percentage"
-            echo "::set-output name=passed_tests::$passed_tests"
-            echo "::set-output name=failed_tests::$failed_tests"
-          else
-            echo "summary.json not found"
-            echo "::set-output name=passing_percentage::0"
-            echo "::set-output name=failing_percentage::0"
-            echo "::set-output name=passed_tests::0"
-            echo "::set-output name=failed_tests::0"
-          fi
-
-      # - name: Notify Slack
-      #   if: always()
-      #   uses: rtCamp/action-slack-notify@v2
-      #   env:
-      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-      #     SLACK_CHANNEL: 'C070KUKPDLZ'
-      #     SLACK_MESSAGE: |
-      #       *Wholistic Organization - API Quality Readiness*
-      #       *Contributors - Azeez*
-      #       Status: ${{ job.status }}
-      #       Passing Tests: ${{ steps.parse_latest_json.outputs.passing_percentage }}%
-      #       Failing Tests: ${{ steps.parse_latest_json.outputs.failing_percentage }}%
-      #       Total Passed: ${{ steps.parse_latest_json.outputs.passed_tests }}
-      #       Total Failed: ${{ steps.parse_latest_json.outputs.failed_tests }}
-      #       GitHub Pages URL: ${{ secrets.PAGES_URL }}/cashdrive-business/${{ steps.new_folder.outputs.latest_folder_number }}
